// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gomod/update updateDependency replaces major gopkg.in updates 1`] = `
"module github.com/renovate-tests/gomod1

require github.com/pkg/errors v0.7.0
require github.com/aws/aws-sdk-go v1.15.21
require github.com/davecgh/go-spew v1.0.0
require golang.org/x/foo v1.0.0
require github.com/rarkins/foo abcdef1
require gopkg.in/russross/blackfriday.v2 v2.0.0
"
`;

exports[`manager/gomod/update updateDependency replaces two values in one file 1`] = `
"module github.com/renovate-tests/gomod1

require github.com/pkg/errors v0.8.0
require github.com/aws/aws-sdk-go v1.15.36
require github.com/davecgh/go-spew v1.0.0
require golang.org/x/foo v1.0.0
require github.com/rarkins/foo abcdef1
require gopkg.in/russross/blackfriday.v1 v1.0.0
"
`;
